--- a/RestaurantApp/android/app/build.gradle
+++ b/RestaurantApp/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.jideguru.restaurant_ui_kit"
+        applicationId "com.pruebaa.restaurant"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
